# privacy-compliance-toolkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: schema.sql
data/checklists/: gdpr_notice_requirements.yaml
data/examples/: sample_policy.md
data/frameworks/: danish_dpa.csv  gdpr.csv  iso_27701.csv  nist_csf_2.csv
docs/: SECURITY-REVIEW.md  SECURITY.md  v1-plan.md
scripts/: analyze_notice.py  analyze_policy.py  ask.py  generate_api_key.py  index_frameworks.py  init_db.py  load_frameworks.py  try_tools.py
src/: __init__.py  config.py  db.py  logging_gateway.py
src/checklist/: __init__.py  loader.py
src/frameworks/: __init__.py  loader.py
src/guardrails/: __init__.py  input.py  output.py  processing.py
src/llm/: __init__.py  client.py  prompts.py
src/mcp_server/: __init__.py  auth.py  middleware.py  rate_limit.py  server.py
src/rag/: __init__.py  embeddings.py  engine.py  gap_analysis.py  notice_analysis.py  vector_store.py
src/web/: __init__.py  app.py
tests/: conftest.py  test_adversarial.py  test_ask_compliance.py  test_auth.py  test_framework_loader.py  test_gap_analysis.py  test_guardrails_input.py  test_guardrails_output.py  test_llm_client.py  test_logging_gateway.py  test_middleware.py  test_notice_analysis.py  test_notice_checklist.py  test_rag_embeddings.py  test_rag_engine.py  test_rag_vector_store.py  test_rate_limit.py  test_semantic_search.py
