[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-compliance-toolkit"
version = "0.1.0"
description = "Privacy & compliance toolkit with security-by-design guardrails (GDPR, Danish DPA, NIST CSF 2.0)"
authors = [{ name = "Kumari Rupali Bansal" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = [
  "S101",  # asserts in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
